--- a/api/app-framework-all/app-designpattern-spring-boot-starter/pom.xml
+++ b/api/app-framework-all/app-designpattern-spring-boot-starter/pom.xml
@@ -5,18 +5,19 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.hzz</groupId>
-        <artifactId>api</artifactId>
+        <artifactId>app-framework-all</artifactId>
         <version>2.1.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>app-framework-all</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>app-ddd-framework-core</module>
-        <module>app-convention-spring-boot-starter</module>
-        <module>app-base-spring-boot-starter</module>
-        <module>app-designpattern-spring-boot-starter</module>
-    </modules>
+    <artifactId>app-designpattern-spring-boot-starter</artifactId>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.hzz</groupId>
+            <artifactId>app-base-spring-boot-starter</artifactId>
+            <version>2.1.1-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
