--- a/api/app-framework-all/app-security-spring-boot-starter/pom.xml
+++ b/api/app-framework-all/app-security-spring-boot-starter/pom.xml
@@ -5,20 +5,21 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.hzz</groupId>
-        <artifactId>api</artifactId>
+        <artifactId>app-framework-all</artifactId>
         <version>2.1.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>app-framework-all</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>app-ddd-framework-core</module>
-        <module>app-convention-spring-boot-starter</module>
-        <module>app-base-spring-boot-starter</module>
-        <module>app-designpattern-spring-boot-starter</module>
-        <module>app-security-spring-boot-starter</module>
-    </modules>
-
+    <artifactId>app-security-spring-boot-starter</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>com.password4j</groupId>
+            <artifactId>password4j</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+        </dependency>
+    </dependencies>
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
