--- a/api/app-auth/auth-server/pom.xml
+++ b/api/app-auth/auth-server/pom.xml
@@ -9,6 +9,12 @@
 
     <artifactId>auth-server</artifactId>
     <version>2.1.1-SNAPSHOT</version>
+    <packaging>pom</packaging>
+
+    <modules>
+        <module>auth-server-interface</module>
+        <module>auth-server-application</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -18,10 +24,9 @@
 
 
     <dependencies>
-
         <dependency>
             <groupId>org.hzz</groupId>
-            <artifactId>app-user</artifactId>
+            <artifactId>app-convention-spring-boot-starter</artifactId>
             <version>2.1.1-SNAPSHOT</version>
         </dependency>
         <dependency>
@@ -35,15 +40,15 @@
                 </exclusion>
             </exclusions>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-configuration-processor</artifactId>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>io.jsonwebtoken</groupId>
-            <artifactId>jjwt</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-configuration-processor</artifactId>-->
+<!--            <optional>true</optional>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>io.jsonwebtoken</groupId>-->
+<!--            <artifactId>jjwt</artifactId>-->
+<!--        </dependency>-->
     </dependencies>
 
 </project>
