--- a/api/app-auth/auth-server/auth-server-application/pom.xml
+++ b/api/app-auth/auth-server/auth-server-application/pom.xml
@@ -16,5 +16,16 @@
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
+    <dependencies>
+        <dependency>
+            <groupId>org.hzz</groupId>
+            <artifactId>user-domain</artifactId>
+            <version>2.1.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hzz</groupId>
+            <artifactId>app-security-spring-boot-starter</artifactId>
+            <version>2.1.1-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
