--- a/api/app-auth/auth-server/auth-server-interface/pom.xml
+++ b/api/app-auth/auth-server/auth-server-interface/pom.xml
@@ -16,12 +16,14 @@
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.hzz</groupId>
-            <artifactId>user-application</artifactId>
+            <artifactId>auth-server-application</artifactId>
             <version>2.1.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
+
 
 </project>
