--- a/api/app-auth/auth-server/auth-server-config/pom.xml
+++ b/api/app-auth/auth-server/auth-server-config/pom.xml
@@ -9,11 +9,12 @@
         <version>2.1.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>auth-server-application</artifactId>
+    <artifactId>auth-server-config</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
 </project>
