--- a/api/app-auth/auth-server/pom.xml
+++ b/api/app-auth/auth-server/pom.xml
@@ -14,6 +14,7 @@
     <modules>
         <module>auth-server-interface</module>
         <module>auth-server-application</module>
+        <module>auth-server-config</module>
     </modules>
 
     <properties>
@@ -24,6 +25,16 @@
 
 
     <dependencies>
+        <dependency>
+            <groupId>org.hzz</groupId>
+            <artifactId>user-domain</artifactId>
+            <version>2.1.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hzz</groupId>
+            <artifactId>app-security-spring-boot-starter</artifactId>
+            <version>2.1.1-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>org.hzz</groupId>
             <artifactId>app-convention-spring-boot-starter</artifactId>
@@ -40,6 +51,7 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
 <!--        <dependency>-->
 <!--            <groupId>org.springframework.boot</groupId>-->
 <!--            <artifactId>spring-boot-configuration-processor</artifactId>-->
