--- a/api/app-auth/auth-server/auth-server-application/pom.xml
+++ b/api/app-auth/auth-server/auth-server-application/pom.xml
@@ -16,4 +16,11 @@
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>org.hzz</groupId>
+            <artifactId>auth-server-infrastructure</artifactId>
+            <version>2.1.1-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
