--- a/api/app-auth/auth-server/auth-server-domain/pom.xml
+++ b/api/app-auth/auth-server/auth-server-domain/pom.xml
@@ -5,24 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.hzz</groupId>
-        <artifactId>app-user</artifactId>
+        <artifactId>auth-server</artifactId>
         <version>2.1.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>user-application</artifactId>
+    <artifactId>auth-server-domain</artifactId>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.hzz</groupId>
-            <artifactId>user-infrastructure</artifactId>
-            <version>2.1.1-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.hzz</groupId>
-            <artifactId>app-designpattern-spring-boot-starter</artifactId>
-            <version>2.1.1-SNAPSHOT</version>
-        </dependency>
-    </dependencies>
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
