--- a/api/app-auth/auth-server/auth-server-infrastructure/pom.xml
+++ b/api/app-auth/auth-server/auth-server-infrastructure/pom.xml
@@ -5,28 +5,23 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.hzz</groupId>
-        <artifactId>app-user</artifactId>
+        <artifactId>auth-server</artifactId>
         <version>2.1.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>user-application</artifactId>
+    <artifactId>auth-server-infrastructure</artifactId>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.hzz</groupId>
-            <artifactId>user-infrastructure</artifactId>
-            <version>2.1.1-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.hzz</groupId>
-            <artifactId>app-designpattern-spring-boot-starter</artifactId>
-            <version>2.1.1-SNAPSHOT</version>
-        </dependency>
-    </dependencies>
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>org.hzz</groupId>
+            <artifactId>auth-server-domain</artifactId>
+            <version>2.1.1-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 </project>
