--- a/api/app-auth/auth-server/pom.xml
+++ b/api/app-auth/auth-server/pom.xml
@@ -15,6 +15,8 @@
         <module>auth-server-interface</module>
         <module>auth-server-application</module>
         <module>auth-server-config</module>
+        <module>auth-server-domain</module>
+        <module>auth-server-infrastructure</module>
     </modules>
 
     <properties>
