--- a/api/app-main/pom.xml
+++ b/api/app-main/pom.xml
@@ -4,11 +4,11 @@
     <parent>
         <groupId>org.hzz</groupId>
         <artifactId>api</artifactId>
-        <version>2.1.1-SNAPSHOT</version>
+        <version>2.2.0</version>
     </parent>
 
     <artifactId>app-main</artifactId>
-    <version>2.1.1-SNAPSHOT</version>
+    <version>2.2.0</version>
 
     <properties>
         <start.class>org.hzz.AppMain</start.class>
@@ -21,7 +21,7 @@
         <dependency>
             <groupId>org.hzz</groupId>
             <artifactId>auth-server-interface</artifactId>
-            <version>2.1.1-SNAPSHOT</version>
+            <version>2.2.0</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
