--- a/api/app-user/user-infrastructure/pom.xml
+++ b/api/app-user/user-infrastructure/pom.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.hzz</groupId>
         <artifactId>app-user</artifactId>
-        <version>2.1.1-SNAPSHOT</version>
+        <version>2.2.0</version>
     </parent>
 
     <artifactId>user-infrastructure</artifactId>
@@ -21,7 +19,7 @@
         <dependency>
             <groupId>org.hzz</groupId>
             <artifactId>user-domain</artifactId>
-            <version>2.1.1-SNAPSHOT</version>
+            <version>2.2.0</version>
         </dependency>
     </dependencies>
 
