--- a/api/app-user/pom.xml
+++ b/api/app-user/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.hzz</groupId>
         <artifactId>api</artifactId>
-        <version>2.2.0</version>
+        <version>2.2.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>app-user</artifactId>
