--- a/api/compose.yaml
+++ b/api/compose.yaml
@@ -1,3 +1,4 @@
+version: '3.8'
 services:
   mysql:
     container_name: video_mysql
@@ -6,7 +7,19 @@ services:
     volumes:
       - "./docker_data/mysql:/var/lib/mysql"
     ports:
-      - 3308:3306
+      - "3308:3306"
     environment:
       - MYSQL_ROOT_PASSWORD=Root.123456
       - MYSQL_DATABASE=videos_online
+  rabbitmq:
+    container_name: video_rabbitmq
+    image: rabbitmq:3.13.3-management
+    restart: unless-stopped
+    volumes:
+      - "./docker_data/rabbitmq:/var/lib/rabbitmq"
+    ports:
+      - "15672:15672"
+      - "5672:5672"
+    environment:
+      RABBITMQ_DEFAULT_USER: pkmer
+      RABBITMQ_DEFAULT_PASS: Root.123456
