--- a/api/app-main/pom.xml
+++ b/api/app-main/pom.xml
@@ -24,6 +24,11 @@
             <version>2.2.1-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>org.hzz</groupId>
+            <artifactId>learning-interface</artifactId>
+            <version>2.2.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
