--- a/api/app-framework-all/app-rabbitmq-spring-boot-starter/pom.xml
+++ b/api/app-framework-all/app-rabbitmq-spring-boot-starter/pom.xml
@@ -22,10 +22,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-amqp</artifactId>
         </dependency>
-        <dependency>
-            <groupId>com.alibaba.fastjson2</groupId>
-            <artifactId>fastjson2-extension-spring6</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.alibaba.fastjson2</groupId>-->
+<!--            <artifactId>fastjson2-extension-spring6</artifactId>-->
+<!--        </dependency>-->
     </dependencies>
 
 </project>
