--- a/api/app-learning/learning-trigger/pom.xml
+++ b/api/app-learning/learning-trigger/pom.xml
@@ -5,28 +5,16 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.hzz</groupId>
-        <artifactId>api</artifactId>
+        <artifactId>app-learning</artifactId>
         <version>2.2.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>app-learning</artifactId>
-    <packaging>pom</packaging>
-
-    <description>学习服务</description>
-
-    <modules>
-        <module>learning-interface</module>
-        <module>learnling-application</module>
-        <module>learning-domain</module>
-        <module>learning-infrastructure</module>
-        <module>learning-trigger</module>
-    </modules>
+    <artifactId>learning-trigger</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
 
 </project>
