--- a/api/app-learning/learning-trigger/pom.xml
+++ b/api/app-learning/learning-trigger/pom.xml
@@ -11,10 +11,26 @@
 
     <artifactId>learning-trigger</artifactId>
 
+    <description>接收微服务以及mq其他数据</description>
+
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <dependencies>
+        <!--   自身模块start     --><!--   自身模块end     -->
+        <dependency>
+            <groupId>org.hzz</groupId>
+            <artifactId>learning-domain</artifactId>
+            <version>2.2.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hzz</groupId>
+            <artifactId>app-rabbitmq-spring-boot-starter</artifactId>
+            <version>2.2.1-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 </project>
