--- a/api/app-order/order-types/pom.xml
+++ b/api/app-order/order-types/pom.xml
@@ -5,15 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.hzz</groupId>
-        <artifactId>api</artifactId>
+        <artifactId>app-order</artifactId>
         <version>2.2.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>app-order</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>order-types</module>
-    </modules>
+    <artifactId>order-types</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
