--- a/api/app-learning/learning-trigger/pom.xml
+++ b/api/app-learning/learning-trigger/pom.xml
@@ -20,7 +20,7 @@
     </properties>
 
     <dependencies>
-        <!--   自身模块start     --><!--   自身模块end     -->
+        <!--   自身模块start     -->
         <dependency>
             <groupId>org.hzz</groupId>
             <artifactId>learning-domain</artifactId>
@@ -28,9 +28,15 @@
         </dependency>
         <dependency>
             <groupId>org.hzz</groupId>
+            <artifactId>learning-types</artifactId>
+            <version>2.2.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hzz</groupId>
             <artifactId>app-rabbitmq-spring-boot-starter</artifactId>
             <version>2.2.1-SNAPSHOT</version>
         </dependency>
+        <!--   自身模块end     -->
     </dependencies>
 
 </project>
