--- a/api/app-learning/learnling-application/pom.xml
+++ b/api/app-learning/learnling-application/pom.xml
@@ -23,6 +23,11 @@
             <artifactId>learning-infrastructure</artifactId>
             <version>2.2.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.hzz</groupId>
+            <artifactId>learning-trigger</artifactId>
+            <version>2.2.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
