--- a/api/app-course/course-domain/pom.xml
+++ b/api/app-course/course-domain/pom.xml
@@ -23,6 +23,11 @@
             <artifactId>app-ddd-framework-core</artifactId>
             <version>2.2.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.hzz</groupId>
+            <artifactId>app-convention-spring-boot-starter</artifactId>
+            <version>2.2.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
