--- a/api/app-learning/learning-infrastructure/pom.xml
+++ b/api/app-learning/learning-infrastructure/pom.xml
@@ -28,6 +28,11 @@
             <artifactId>app-rabbitmq-spring-boot-starter</artifactId>
             <version>2.2.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.hzz.common</groupId>
+            <artifactId>app-common-spring-boot-starter</artifactId>
+            <version>2.2.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
