--- a/api/app-main/pom.xml
+++ b/api/app-main/pom.xml
@@ -18,6 +18,7 @@
     </properties>
 
     <dependencies>
+        <!--  自身依赖Start      -->
         <dependency>
             <groupId>org.hzz</groupId>
             <artifactId>app-web-spring-boot-starter</artifactId>
@@ -33,6 +34,11 @@
             <artifactId>learning-interface</artifactId>
             <version>2.2.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.hzz.course</groupId>
+            <artifactId>course-interface</artifactId>
+            <version>2.2.1-SNAPSHOT</version>
+        </dependency><!--   自身依赖End     -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
