--- a/api/app-main/src/main/resources/application-dev.yml
+++ b/api/app-main/src/main/resources/application-dev.yml
@@ -35,7 +35,9 @@ spring:
 mybatis:
   configuration:
     map-underscore-to-camel-case: true
-  mapper-locations: classpath:mapper/**/*.xml
+  mapper-locations:
+    - classpath*:mapper/*.xml
+    - classpath:mapper/*.xml
 
 springdoc:
   use-fqn: true    #  enables fully qualified names
@@ -54,6 +56,8 @@ app:
       - /auth-test/test
       - /auth-test/error
       - /learning-test/*
+      - /course-test/*
+      - /test/*
       - /error
       - /index
       - /index.html
