--- a/api/app-main/src/main/resources/application-dev.yml
+++ b/api/app-main/src/main/resources/application-dev.yml
@@ -36,8 +36,7 @@ mybatis:
   configuration:
     map-underscore-to-camel-case: true
   mapper-locations:
-    - classpath*:mapper/*.xml
-    - classpath:mapper/*.xml
+    - classpath*:mapper/**/*.xml
 
 springdoc:
   use-fqn: true    #  enables fully qualified names
