--- a/api/app-framework-all/app-convention-spring-boot-starter/pom.xml
+++ b/api/app-framework-all/app-convention-spring-boot-starter/pom.xml
@@ -15,4 +15,11 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.hzz.common</groupId>
+            <artifactId>app-common-spring-boot-starter</artifactId>
+            <version>2.2.1-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
