--- a/api/app-framework-all/app-aop-spring-boot-starter/pom.xml
+++ b/api/app-framework-all/app-aop-spring-boot-starter/pom.xml
@@ -25,6 +25,11 @@
             <version>2.2.1-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>org.hzz</groupId>
+            <artifactId>app-security-spring-boot-starter</artifactId>
+            <version>2.2.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
