--- a/api/app-learning/learning-interface/pom.xml
+++ b/api/app-learning/learning-interface/pom.xml
@@ -34,8 +34,8 @@
             <version>2.2.1-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>org.hzz</groupId>
-            <artifactId>app-security-spring-boot-starter</artifactId>
+            <groupId>org.hzz.aop</groupId>
+            <artifactId>app-aop-spring-boot-starter</artifactId>
             <version>2.2.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
