--- a/api/app-main/src/main/resources/application-dev.yml
+++ b/api/app-main/src/main/resources/application-dev.yml
@@ -52,6 +52,8 @@ app:
   auth:
     ignore-urls:
       - /auth/*
+      - /doc/*
+      - /v3/*
       - /auth-test/test
       - /auth-test/error
       - /learning-test/*
