--- a/api/app-framework-all/pom.xml
+++ b/api/app-framework-all/pom.xml
@@ -20,6 +20,7 @@
         <module>app-rabbitmq-spring-boot-starter</module>
         <module>app-common-spring-boot-starter</module>
         <module>app-aop-spring-boot-starter</module>
+        <module>app-fastjson2-spring-boot-starter</module>
     </modules>
 
     <properties>
